# micro-blog-journal-hub

./: .gitignore  README.md  README.md   package-lock.json  package.json
backend/: reset_db.py  reset_db.sh
frontend/app/collaboration/: page.tsx
recollection-realm/: LICENSE.txt  README.md  docker-compose.yml  package-lock.json  project.yml  pyproject.toml  requirements.txt
recollection-realm/app/: .env  main.py
recollection-realm/app/models/: __init__.py  app.code-workspace  entry.py  journal.py  user.py
recollection-realm/app/schemas/: journal.py
recollection-realm/backend/: DockerFile  Dockerfile  docker-compose.yml  init_db.sh  pyproject.toml  requirements.txt  reset_db.sh  start.sh
recollection-realm/backend/app/: __init__.py  backup.py  main.py
recollection-realm/backend/app/database/: __init__.py  connection.py  database.py  init_db.py
recollection-realm/backend/app/models/: comment.py  entry.py  journal.py  models.py  post.py  user.py
recollection-realm/backend/app/routers/: auth.py  entry.py  journal.py  post.py  user.py
recollection-realm/backend/app/schemas/: entry.py  post.py  schemas.py  user.py
recollection-realm/backend/app/utils/: auth.py  utils.py
recollection-realm/backend/tests/: __init__.py
recollection-realm/backend/tests/unit/: test_user.py
recollection-realm/frontend/: Dockerfile  package-lock.json  package.json
recollection-realm/frontend/app/: globals.css  home_backup.tsx  layout.tsx  loginBackup.tsx  login_backup.tsx  page.tsx
recollection-realm/frontend/app/about/: page.tsx  preview.tsx
recollection-realm/frontend/app/collaboration/: page.tsx
recollection-realm/frontend/app/create-post/: page.tsx
recollection-realm/frontend/app/feed/: page.tsx
recollection-realm/frontend/app/friends/: page.tsx
recollection-realm/frontend/app/home/: page.tsx
recollection-realm/frontend/app/login/: page.tsx
recollection-realm/frontend/app/profile/: page.tsx
recollection-realm/frontend/app/register/: page.tsx
recollection-realm/frontend/app/signup/: page.tsx
recollection-realm/frontend/app/whats-new/: page.tsx
recollection-realm/frontend/components/: Navbar.tsx  auth-form.tsx  friend-post.tsx  friends-list.tsx  header.tsx  interest-tags.tsx  login-form.tsx  loginBackup.tsx  post-card.tsx  register-form.tsx  signup-form.tsx
recollection-realm/frontend/services/: CreatePost
recollection-realm/src/models/: models.py
recollection-realm/src/recollection_realm/: __about__.py
recollection-realm/src/schemas/: schemas.py
recollection-realm/tests/: __init__.py
