[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recollection-realm"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "RhiloSotto", email = "rnsotto@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/RhiloSotto/recollection-realm#readme"
Issues = "https://github.com/RhiloSotto/recollection-realm/issues"
Source = "https://github.com/RhiloSotto/recollection-realm"

[tool.hatch.version]
path = "src/recollection_realm/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/recollection_realm tests}"

[tool.coverage.run]
source_pkgs = ["recollection_realm", "tests"]
branch = true
parallel = true
omit = [
  "src/recollection_realm/__about__.py",
]

[tool.coverage.paths]
recollection_realm = ["src/recollection_realm", "*/recollection-realm/src/recollection_realm"]
tests = ["tests", "*/recollection-realm/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
