[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recollection-realm"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "RhiloSotto", email = "rnsotto@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi>=0.103.1,<0.104.0",
  "uvicorn>=0.23.2,<0.24.0",
  "sqlalchemy>=2.0.20,<2.1.0",
  "pydantic>=2.3.0,<2.4.0",
  "python-jose[cryptography]>=3.3.0,<3.4.0",
  "passlib[bcrypt]>=1.7.4,<1.8.0",
  "python-multipart>=0.0.6,<0.1.0",
  "alembic>=1.12.0,<1.13.0",
  "python-dotenv>=1.0.0,<1.1.0",
  "email-validator>=2.0.0,<2.1.0",
  "psycopg2-binary>=2.9.9,<2.10.0"
]

[project.urls]
Documentation = "https://github.com/RhiloSotto/recollection-realm#readme"
Issues = "https://github.com/RhiloSotto/recollection-realm/issues"
Source = "https://github.com/RhiloSotto/recollection-realm"

[tool.hatch.version]
path = "src/recollection_realm/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/recollection_realm tests}"

[tool.coverage.run]
source_pkgs = ["recollection_realm", "tests"]
branch = true
parallel = true
omit = [
  "src/recollection_realm/__about__.py",
]

[tool.coverage.paths]
recollection_realm = ["src/recollection_realm", "*/recollection-realm/src/recollection_realm"]
tests = ["tests", "*/recollection-realm/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
